[package]
name = "programmatic_go"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"

[dependencies]
serde = { version="1", features=["derive"] }
serde_json = "1"


# PB Serialization 
prost = "0.13"
prost-types = "0.13"
pbjson= "0.7"
pbjson-types = "0.7"


# Hyper Server
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }


# For building OpenRTB types from ./protos/ortb.proto
[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"


[dev-dependencies]
reqwest = { version = "0.12", features=["json"] }
